update website & add classifier

--- a/py_web/static/bootstrap.css
+++ b/py_web/static/bootstrap.css
@@ -3175,6 +3175,11 @@ fieldset[disabled] .btn-primary.focus {
   background-color: #5cb85c;
   border-color: #4cae4c;
 }
+.btn-success-red {
+  color: #fff;
+  background-color: #8b0000;
+  border-color: #4cae4c;
+}
 .btn-success:focus,
 .btn-success.focus {
   color: #fff;
